Fixes spacing on featured posts in postlist

--- a/src/assets/css/5-elements/_headings.scss
+++ b/src/assets/css/5-elements/_headings.scss
@@ -87,6 +87,8 @@ h3 {
 }
 
 .postlist-item-featured {
+    padding-top: 1rem;
+    
     .postlist-link {
         position: relative;
 
